[workspace]
resolver = "2"
members = ["crates/rtrax-core", "crates/rtrax", "crates/rtrax-gui"]

[workspace.package]
version = "0.9.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
rtrax-core = { path = "crates/rtrax-core", version = "0.9.0" }
openmpt = "0.3"
cpal = "0.15"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
crossterm = "0.29"
eframe = "0.35"
souvlaki = "0.8"
rustfft = "6"
rtrb = "0.3"
crossbeam-channel = "0.5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
