[package]
name = "rtrax"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI MOD/XM/IT/S3M/MTM module player"

[dependencies]
rtrax-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
rtrb = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
